--- a/BlogPessoal/src/main/resources/application.properties
+++ b/BlogPessoal/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.jpa.hibernate.dll-auto=update
-dataource.url=jdbc:mysql://localhost:3306/BlogPessoal?createDatabaseifNotExist=true&serverTimezone=UTC&useSSl=false
-datasource.username=root
-datasource.password=Generation@123
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost/blogpessoal?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
+spring.datasource.username=root
+spring.datasource.password=Generation@123
 jpa.show-sql=true
